Fix overflow hidden bug
Fix overflow hidden bug

- Remove overflow css property from box, card, notice and panel components

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -55,7 +55,6 @@ $card-link-color--hover: $link-color--hover !default;
     font-size: $card-font-size;
     margin: 0;
     margin-bottom: $card-element-spacing;
-    overflow: hidden;
     padding: 0;
 
     // Modifiers: Size
