--- a/sass/components/_panel.scss
+++ b/sass/components/_panel.scss
@@ -56,7 +56,6 @@ $panel-head-font-color: font-color('default') !default;
     font-size: $panel-font-size;
     margin: 0;
     margin-bottom: $panel-element-spacing;
-    overflow: hidden;
     padding: 0;
 
     // Modifiers
